[package]
name = "fenrirs_os"
version = "0.1.0"
authors = ["dakota"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8"
volatile = "0.2"
spin = "0.4"
#fatfs = "0.3"

# Disable unwinding by setting panic to abort
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"